--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reserve-test",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://qupe.github.io/reserve-room-test/",
+  "homepage": "https://qupe.github.io/reserve-room-test/",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "node-sass-chokidar": "0.0.3",
@@ -20,6 +20,11 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js"
+    "build": "npm-run-all build-css build-js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
